Allow custom list display

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <title>EasyVote</title>
     </head>
 
-    <body>
+    <body bgcolor="darkgray">
         <div id="root"></div>
     </body>
 </html>
